# simplecard

./: AbstractPlayer.cpp  AbstractPlayer.h  AbstractTable.cpp  AbstractTable.h  CMakeLists.txt  Card.cpp  Card.h  EventlyPlayer.cpp  EventlyPlayer.h  GameEvent.cpp  GameEvent.h  Player.cpp  Player.h  Slot.cpp  Slot.h  Table.cpp  Table.h  main.cpp
